--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     @*<script src="~/lib/jquery-3.6.0/dist/jquery.min.js"></script>*@
     <link rel="stylesheet" href="~/css/site.css" />
-
     @{
         string defaultClass = " bg-success bg-gradient shadow rounded-2";
         string htmlUrl = Context.Request.Path.Value;
@@ -71,53 +70,41 @@
                         <div class="col">
                             <ul class="navbar-nav flex-grow-1">
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Index"]" asp-area="" asp-page="/Index" title="">个人工作台</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Index"]" asp-area="" asp-page="/Index" title="">个人工作台</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Products"]" asp-area="" asp-page="/Products/Index">公司产品</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Products"]" asp-area="" asp-page="/Products/Index">公司产品</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Requirements"]" asp-area="" asp-page="/Requirements/Index">需求跟踪</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Requirements"]" asp-area="" asp-page="/Requirements/Index">需求跟踪</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Plans"]" asp-area="" asp-page="/Plans/Index">研发计划</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Plans"]" asp-area="" asp-page="/Plans/Index">研发计划</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Clocks"]" asp-area="" asp-page="/Clocks/Index">工时填写</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Clocks"]" asp-area="" asp-page="/Clocks/Index">工时填写</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7  @ViewData["nav_Leaks"]" asp-area="" asp-page="/Leaks/Index">缺陷列表</a>
-                                </li>
-                                @*<li class="nav-item">
-                                        <a class="nav-link text-white fs-7" asp-area="" asp-page="/Employees/Index">员工列表</a>
-                                    </li>*@
-                                @*<li class="nav-item">
-                                        <a class="nav-link text-white fs-7 @ViewData["nav_Projects"]" asp-area="" asp-page="/Projects/Index">医院列表</a>
-                                    </li>*@
-                                <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Wiki"]" asp-area="" asp-page="/Wiki/Index">Wiki</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7  @ViewData["nav_Leaks"]" asp-area="" asp-page="/Leaks/Index">缺陷列表</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Documents"]" asp-area="" asp-page="/Documents/Index">文档附件</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Wiki"]" asp-area="" asp-page="/Wiki/Index">Wiki</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Helps"]" asp-area="" asp-page="/Helps/Index">使用帮助</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Documents"]" asp-area="" asp-page="/Documents/Index">文档附件</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Privacy"]" asp-area="" asp-page="/Privacy">Privacy</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Helps"]" asp-area="" asp-page="/Helps/Index">使用帮助</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Privacy"]" asp-area="" asp-page="/Privacy">Privacy</a>
                                 </li>
                             </ul>
                         </div>
-                        @*<div class="col-3">
-                                <div class="input-group pt-1">
-                                    <input type="text" class="form-control bg-transparent p-1 m-0 fs-7 mr-1 shadow rounded-3" placeholder="请输检索内容" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                                    <button class="input-group-text bg-danger fs-7 p-0 m-0 ps-3 pr-3" id="basic-addon2">检索</button>
-                                </div>
-                            </div>*@
                         <div class="col-1 d-flex align-content-end text-right justify-content-end mr-0 pr-0">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7" asp-area="" asp-page="/Management/Project"><i class="bi bi-gear"></i>&nbsp;设置</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Management/About"><i class="bi bi-gear"></i>&nbsp;设置</a>
                                 </li>
                             </ul>
                         </div>
