--- a/Pages/Shared/_ManagementLayout.cshtml
+++ b/Pages/Shared/_ManagementLayout.cshtml
@@ -8,6 +8,7 @@
     @*<script src="~/lib/bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>*@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/64adc7381d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     @*<script src="~/lib/jquery-3.6.0/dist/jquery.min.js"></script>*@
     <link rel="stylesheet" href="~/css/site.css" />
     <style>
@@ -74,7 +75,7 @@
         </div>
     </div>*@
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3 lh-sm shadow">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3 lh-sm p-1 shadow">
             <div class="container-fluid bg-success">
                 <a class="navbar-brand  text-white" href="#temp">RubyMine</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -86,51 +87,42 @@
                         <div class="col">
                             <ul class="navbar-nav flex-grow-1">
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Index"]" asp-area="" asp-page="/Index">主页</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Index"]" asp-area="" asp-page="/Index" title="">个人工作台</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Products"]" asp-area="" asp-page="/Products/Index">公司产品</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Products"]" asp-area="" asp-page="/Products/Index">公司产品</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Projects"]" asp-area="" asp-page="/Projects/Index">医院列表</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Requirements"]" asp-area="" asp-page="/Requirements/Index">需求跟踪</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Requirements"]" asp-area="" asp-page="/Requirements/Index">需求跟踪</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Plans"]" asp-area="" asp-page="/Plans/Index">研发计划</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7  @ViewData["nav_Leaks"]" asp-area="" asp-page="/Leaks/Index">缺陷列表</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Clocks"]" asp-area="" asp-page="/Clocks/Index">工时填写</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Plans"]" asp-area="" asp-page="/Plans/Index">研发计划</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7  @ViewData["nav_Leaks"]" asp-area="" asp-page="/Leaks/Index">缺陷列表</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Clocks"]" asp-area="" asp-page="/Clocks/Index">工时填写</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Wiki"]" asp-area="" asp-page="/Wiki/Index">Wiki</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Wiki"]" asp-area="" asp-page="/Wiki/Index">Wiki</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Documents"]" asp-area="" asp-page="/Documents/Index">文档附件</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Documents"]" asp-area="" asp-page="/Documents/Index">文档附件</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Helps"]" asp-area="" asp-page="/Helps/Index">使用帮助</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Helps"]" asp-area="" asp-page="/Helps/Index">使用帮助</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 @ViewData["nav_Privacy"]" asp-area="" asp-page="/Privacy">Privacy</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7 @ViewData["nav_Privacy"]" asp-area="" asp-page="/Privacy">Privacy</a>
                                 </li>
                             </ul>
-                        </div>                        
-                        <div class="col-2 d-flex">
-                            <ul class="navbar-nav flex-grow-1 justify-content-end">
-                                @*<li class="nav-item">
-                                    <a class="nav-link text-white fs-7" asp-area="" asp-page="/Privacy">rubymine</a>
-                                </li>*@
+                        </div>
+                        <div class="col-1 d-flex align-content-end text-right justify-content-end mr-0 pr-0">
+                            <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link text-white fs-7 fw-bold" href="#temp"><i class="fas fa-align-justify"></i>&nbsp;系统设置</a>
+                                    <a class="nav-link text-decoration-none text-white fs-7" asp-area="" asp-page="/Management/Project"><i class="bi bi-gear"></i>&nbsp;设置</a>
                                 </li>
-                                @*<li class="nav-item">
-                                    <a class="nav-link text-white fs-7" asp-area="" asp-page="/Privacy">退出</a>
-                                </li>*@
                             </ul>
                         </div>
                     </div>
@@ -148,6 +140,7 @@
             <div class="row">
                 <div class="col">
                     <div class="nav-pills flex-column lh-lg" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                        <a class="nav-link text-dark m-0 p-1 @ViewData["nav_About"]" asp-area="" asp-page="/Management/About"><img src="~/images/report.png" />&nbsp;退出</a>
                         <a class="nav-link text-dark m-0 p-1 @ViewData["nav_Project"]" asp-area="" asp-page="/Management/Project"><img src="~/images/projects.png" />&nbsp;项目</a>
                         <a class="nav-link text-dark m-0 p-1 @ViewData["nav_Trace"]" asp-area="" asp-page="/Management/Trace"><img src="~/images/ticket.png" />&nbsp;跟踪标签</a>
                         <a class="nav-link text-dark m-0 p-1 @ViewData["nav_User"]" asp-area="" asp-page="/Management/User"><img src="~/images/group.png" />&nbsp;用户</a>
@@ -157,7 +150,6 @@
                         <a class="nav-link text-dark m-0 p-1 @ViewData["nav_Flow"]" asp-area="" asp-page="/Management/Flow"><img src="~/images/ticket_go.png" />&nbsp;工作流程</a>
                         <a class="nav-link text-dark m-0 p-1 @ViewData["nav_Common"]" asp-area="" asp-page="/Management/Common"><img src="~/images/changeset.png" />&nbsp;通用</a>
                         <a class="nav-link text-dark m-0 p-1 @ViewData["nav_Enum"]" asp-area="" asp-page="/Management/Enum"><img src="~/images/text_list_bullets.png" />&nbsp;枚举值</a>
-                        <a class="nav-link text-dark m-0 p-1 @ViewData["nav_About"]" asp-area="" asp-page="/Management/About"><img src="~/images/report.png" />&nbsp;退出</a>
                     </div>
                 </div>
             </div>
