--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,31 +1,64 @@
 ﻿@page
 @model IndexModel
+@using RubyMine.Models;
 @{
     ViewData["Title"] = "Home page";
+    User cua = SessionUtils.Get<User>(HttpContext.Session, "cua");
+    bool aleradyLogin = cua != null;
 }
 
-<div class="container w-25 fw-bold shadow p-lg-5 fs-7">
-    <div class="row">
-        <div class="col">
-            <label for="basic-url" class="form-label">登录名</label>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon3"><i class="bi bi-person-circle"></i></span>
-                <input type="text" class="form-control text-666 fs-7" id="basic-url" aria-describedby="basic-addon3">
+@if (aleradyLogin == false) {
+<form method="post">
+    <div class="container fw-bold rounded-3 border-1 border-ccc bg-light shadow p-4 fs-7" style="margin-top:8%;max-width:25%;">
+        <div class="row pb-3">
+            <div class="col">
+                <h3 class="text-269"><i class="bi bi-arrow-right-circle"></i>&nbsp;请先登录</h3>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <label for="basic-url" class="form-label">密码</label>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon3"><i class="bi bi-gender-ambiguous"></i></span>
-                <input type="password" class="form-control text-666 fs-7" id="basic-url" aria-describedby="basic-addon3">
+        <div class="row">
+            <div class="col">
+                <label for="basic-url" class="form-label">登录帐号</label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text m-0 p-3 pt-1 pb-1" id="basic-addon3"><i class="bi bi-person-circle"></i></span>
+                    <input type="text" class="form-control m-0 p-0 ps-1 text-666 fs-7" asp-for="Login" autocomplete="off" placeholder="请输入登录帐号" value="@TempData.Peek("TempLogin")">
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <button type="button" class="btn w-100 btn-light border-1 border-ccc bg-title fs-7">登录</button>
+        <div class="row">
+            <div class="col">
+                <label for="basic-url" class="form-label">密码</label>
+                <div class="input-group mb-3">
+                    <span class="input-group-text m-0 p-3 pt-1 pb-1" id="basic-addon3"><i class="bi bi-gender-ambiguous"></i></span>
+                    <input type="password" class="form-control m-0 p-0 ps-1 text-666 fs-7" asp-for="Password" autocomplete="off" placeholder="请输入密码" value="@TempData.Peek("TempPassword")">
+                </div>
+            </div>
         </div>
+        <div class="row mt-0 fs-7" style="display:none @TempData.Peek("ShowLogin");">
+            <div class="col">
+                <div class="alert mt-0 alert-danger" role="alert">
+                    @TempData.Peek("ShowMessage")
+                </div>
+            </div>
+        </div>
+        <div class="row mt-2 mb-1">
+            <div class="col">
+                <button type="submit" class="btn pt-2 pb-2 w-100 btn-light border-1 border-ccc bg-success text-light fs-7">登录</button>
+            </div>
+        </div>
+        @*<div class="row mt-3">
+                <div class="col">
+                    <div class="form-check form-switch fs-6">
+                        <input class="form-check-input" type="checkbox" asp-for="SaveOnline">
+                        <label class="form-check-label fs-7" for="flexSwitchCheckDefault">保持登录状态</label>
+                    </div>
+                </div>
+            </div>*@
     </div>
-</div>
+</form>
+<script>
+    $(document).ready(function () {
+        $('#Login').focus();
+        @Html.Raw(TempData.Peek("jsScript"))
+    });
+</script>
+}
