--- a/Pages/Management/About.cshtml
+++ b/Pages/Management/About.cshtml
@@ -1,54 +1,60 @@
 ﻿@page
 @model RubyMine.Pages.Management.AboutModel
+@using RubyMine.Models;
 @{
     Layout = "~/Pages/Shared/_ManagementLayout.cshtml";
+    User cua = SessionUtils.Get<User>(HttpContext.Session, "cua");
+    if(cua ==null) {
+        return;
+    }
 }
 
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Create</title>
 </head>
 <body>
-    <div class="row bg-title">
-        <div class="col">
-            <div class="row border-1 border-ccc bg-title pt-1 pb-1 ps-1 fw-bold">
-                退出
+        <div class="row bg-title">
+            <div class="col">
+                <div class="row border-1 border-ccc bg-title pt-1 pb-1 ps-1 fw-bold">
+                    设置 -> 主页
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col p-0">
-            <table class="table border-1 border-ccc table-hover border-top-0">
-                <thead>
-                    <tr>
-                        <th class="p-0 ps-1 pt-1 pb-1">
-
-                        </th>
-                        <th class="p-0 ps-1 pt-1 pb-1">
-                        </th>
-                        <th class="p-0 ps-1 pt-1 pb-1">
-                        </th>
-                        <th class="p-0 ps-1 pt-1 pb-1">
-                        </th>
-                        <th class="p-0 ps-1 pt-1 pb-1"></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>是否退出RubyMine后台管理系统？</td>
-                        <td>
-                    </tr>
-                    <tr>
-                        <td><button>是</button></td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="row">
+            <div class="col p-0 border-1 border-ccc">
+                <fieldset class="m-1">
+                    <legend>@cua.Firstname</legend>
+                    <form class="lh-lg">
+                        <span class="text-666">最近登录：</span><label>@cua.LastLoginOn.Value.ToString("yyyy-MM-dd HH:mm:ss")</label><br />
+                        <span class="text-666">登录帐号：</span><label>@cua.Login</label><br />
+                        <span class="text-666">创建于：</span><label>@cua.CreatedOn.Value.ToString("yyyy-MM-dd HH:mm:ss")</label><br />
+                    </form>
+                </fieldset>
+                <table class="table table-hover border-top-0">
+                    <thead>
+                        <tr>
+                            <th class="p-0 ps-1 pt-1 pb-1">
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="text-269"><i class="bi bi-exclamation-triangle"></i>&nbsp;是否退出RubyMine后台管理系统？</td>                  
+                        </tr>
+                        <tr>
+                            <td>
+                                <form method="post">
+                                    <button type="submit">退出登录</button>
+                                </form>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </div>
-
     @section Scripts {
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     }
