--- a/Pages/Issues/New.cshtml
+++ b/Pages/Issues/New.cshtml
@@ -187,16 +187,16 @@
     <div style="margin-bottom:30px">
         &nbsp;
     </div>
-    <div class="row fixed-bottom bottom-0 end-0 mr-0 bg-white border-1 border-ccc p-2">
+    <div class="row fixed-bottom bottom-0 end-0 mr-0 bg-white border-1 border-ccc p-2 border-end-0">
         <div class="col mr-0">
             <div class="float-right text-start justify-content-end">
-                <button type="button" class="btn btn-primary btn-sm p-1 ps-2 pr-3 text-end shadow fs-7"><i class="bi bi-check-lg fs-7 m-0 p-0"></i>&nbsp;&nbsp;保存</button>
+                <button type="button" class="btn btn-success btn-sm p-1 ps-2 pr-3 text-end shadow fs-7"><i class="bi bi-check-lg fs-7 m-0 p-0"></i>&nbsp;&nbsp;保存</button>
                 <button type="button" class="btn btn-secondary btn-sm shadow fs-7" data-bs-toggle="offcanvas" role="button" aria-controls="offcanvasExample">取消</button>
             </div>
         </div>
-        <div class="col text-right ps-0">
-            <span class="offcanvas-title fw-bold text-start" id="offcanvasExampleLabel"><i class="bi bi-lightning"></i>&nbsp;快速登记</span>
-        </div>&nbsp;
+        @*<div class="col text-right ps-0">
+            <span class="offcanvas-title fw-bold text-start" id="offcanvasExampleLabel"><i class="bi bi-lightning"></i>&nbsp;新建问题</span>
+        </div>&nbsp;*@
     </div>
 
     @Model.Project_id
